# florl

./: .gitignore  .mypy.ini  README.md  pyproject.toml
examples/feddqn/: README.md  pyproject.toml
examples/feddqn/feddqn/: __init__.py  client_app.py  feddqn_dbg.txt  main.py  server_app.py  task.py
examples/feddqn/feddqn/conf/: cartpole.yaml
examples/feddqn/feddqn_experiment/state/0/: action.memmap  action_value.memmap  chosen_action_value.memmap  episode_reward.memmap  meta.json  observation.memmap
examples/feddqn/feddqn_experiment/state/0/collector/: meta.json  traj_ids.memmap
examples/feddqn/feddqn_experiment/state/0/next/: done.memmap  episode_reward.memmap  meta.json  observation.memmap
examples/feddqn/tests/: manual.ipynb
examples/fedppo/: .gitignore  README.md  pyproject.toml
examples/fedppo/fedppo/: client_app.py  main.py  server_app.py  task.py
examples/fedppo/fedppo/conf/: cartpole.yaml  config.py
examples/fedppo/tests/: manual.ipynb  test_client.py
experiments/: .gitignore  collection_heterogeneity.ipynb  experiment_utils.py  napkin_dqn.ipynb  partial_aggregation.ipynb  strategy.py  td3_module_selection.ipynb  visualisation.py
experiments/DQNAvg/: .gitignore  dqnavg.py  run.ipynb
experiments/QTOptAvg/: qtoptavg.py  run.ipynb
experiments/baseline_fed_comparison_dqn/: README.md  config.py  plot.py  run_baseline.py  run_federated.py
experiments/baseline_fed_comparison_qtopt/: config_pendulum.py  plot.py  run_pendulum_baseline.py  run_pendulum_federated.py
experiments/config/: README.md
experiments/data_heterogeneity/: .gitignore  config.py  data_generation.py
florl/: __init__.py  client.py
florl/client/: __init__.py  client.py  factory.py
florl/client/kitten/: __init__.py  client.py  dqn.py  qt_opt.py  td3.py
florl/client/kitten/client/: dqn.py  qt_opt.py
florl/common/: __init__.py  knowledge.py  parameter.py  typing.py  util.py
florl/server/strategy/: __init__.py  fedavg.py  strategy.py
report/: divison_of_work.md
src/florl/: client.py
src/florl/_dev/: tests.py
src/florl/client/: __init__.py  client.py  state.py
src/florl/common/: __init__.py  config.py  logging.py  parameter.py  res.py
src/florl/task/: __init__.py  abc.py  gymnasium.py  offline.py  online.py  task.py
src/florl/task/libs/: __init__.py  gymnasium.py
tests/: test_knowledge.py  test_parameter.py  test_task.py
