[project]
name = "florl"
version = "0.1.0"
description = "florl is a federated reinforcement learning framework."
authors = [
    { name = "Hao Xiang Li", email = "mark.haoxiang@gmail.com" },
    { name = "Xavier Chen", email = "zc344@cam.ac.uk" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13" # Flwr breaks currently on 3.13
dependencies = [
    "expecttest>=0.3.0",
    "flwr[simulation]>=1.15.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "numpy<2.0",
    "pydantic>=2.10.6",
    "ray>=2.42.0",
    "torch>=2.6.0",
    "torchrl[gym_continuous]>=0.7.0",
]

[project.optional-dependencies]
examples = ["fedppo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "expecttest>=0.3.0",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
]

[tool.uv.workspace]
members = [".", "examples/*"]

[tool.uv.sources]
florl = { workspace = true }
fedppo = { workspace = true }

