[project]
name = "fedppo"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "torch >=2.6.0",
    "torchrl[gym_continuous] >=0.6.0",
    "florl",
    "pydantic>=2.10.6",
    "hydra-core>=1.3.2",
    "flwr[simulation]>=1.15.0",
    "ray>=2.42.0", # flwr doesn't install ray on Python 3.12
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
